--- a/fitness_buddy/resources/assets/sass/_custom.scss
+++ b/fitness_buddy/resources/assets/sass/_custom.scss
@@ -3,47 +3,29 @@
 //***************************************
 
 body {
-  padding-top: 40px;
-  padding-bottom: 40px;
-  background-color: #eee;
+
+  background-image: url('/images/bikes.jpg');
 }
 
-h1, h5 {
+h1 {
   text-align: center;
 }
 
-.form-signin {
-  max-width: 330px;
-  padding: 15px;
-  margin: 0 auto;
-}
-.form-signin .form-signin-heading,
-.form-signin .checkbox {
-  margin-bottom: 10px;
-}
-.form-signin .checkbox {
-  font-weight: normal;
-}
-.form-signin .form-control {
-  position: relative;
-  height: auto;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  padding: 10px;
-  font-size: 16px;
-}
-.form-signin .form-control:focus {
-  z-index: 2;
-}
-.form-signin input[type="email"] {
-  margin-bottom: -1px;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
-}
-.form-signin input[type="password"] {
-  margin-bottom: 10px;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
+.form-control {
+  margin-left:300px;
+  max-width: 500px;
 }
 
+.well {
+  max-width: 500px;
+  margin-left:300px;
+}
+
+label {
+  color: black;
+  margin-left:300px;
+}
+
+#save {
+  margin-left: 300px;
+}
